--- a/src/devise/templates/devise/index.html
+++ b/src/devise/templates/devise/index.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Tableau de bord - Devise</h1>
+    {% for nombre in liste_nombre %}
+        <h1>Titre n° {{ nombre }}</h1>
+    {% endfor %}
 
 </body>
 </html>
