--- a/src/devise/templates/devise/index.html
+++ b/src/devise/templates/devise/index.html
@@ -6,13 +6,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-trendline"></script>
 </head>
 <body class="bg-dark">
 
     <div class="container-fluide">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-white">Tableau de bord - {{ page_label }}</h1>
+                <a href="{% url 'home' days_range=7 currencies=currencies %}" class="btn {% if page_label == 'Semaine' %} btn-info {% else %} btn-secondary {% endif%}">Semaine</a>
+                <a href="{% url 'home' days_range=30 currencies=currencies %}" class="btn {% if page_label == 'Mois' %} btn-info {% else %} btn-secondary {% endif%}">Mois</a>
+                <a href="{% url 'home' days_range=365 currencies=currencies %}" class="btn {% if page_label == 'Année' %} btn-info {% else %} btn-secondary {% endif%}">Année</a>
+            </div>
+        </div>
         <div class="row justify-content-center">
             {% for currency, rates in data.items %}
-                <div class="col-md-10 col-lg-6 bg-info">
+                <div class="col-md-10 col-lg-6">
 
                     <canvas id="chart-{{ currency }}"></canvas>
 
@@ -31,7 +40,12 @@
                             label: "{{ currency }}",
                             data: {{ rates|safe }},
                             fill: false,
-                            borderColor: 'rgb(255, 128, 128)'
+                            borderColor: 'rgb(255, 128, 128)',
+                            trendlineLinear: {
+                                colorMin: "rgb(125, 0, 250)",
+                                colorMax: "rgb(100, 0, 225)",
+                                width: 2,
+                            }
                        }]
                 }
         });
